[gd_scene load_steps=4 format=3 uid="uid://dhe0v0qwojerb"]

[ext_resource type="Script" uid="uid://dgg0fa81ahgss" path="res://scenes/main_menu/settings/settings_audio.gd" id="1_d47x0"]
[ext_resource type="Texture2D" uid="uid://nng31j22g6fh" path="res://assets/images/icons/play.svg" id="2_38j32"]
[ext_resource type="Script" uid="uid://d0234x8uu2y3k" path="res://scenes/game_world/destroyed_sound.gd" id="3_gwiy3"]

[node name="Audio" type="VBoxContainer"]
offset_right = 162.0
offset_bottom = 210.0
script = ExtResource("1_d47x0")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Audio"
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="HitsoundLabel" type="Label" parent="."]
layout_mode = 2
text = "Hit sound"

[node name="Preview" type="Button" parent="."]
layout_mode = 2
text = "Preview sound"
icon = ExtResource("2_38j32")
alignment = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Preview"]
script = ExtResource("3_gwiy3")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="VolumeSlider" to="Preview/AudioStreamPlayer" method="_on_volume_updated"]
[connection signal="pressed" from="Preview" to="." method="_on_preview_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
